rolldice-zero-code/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rolldice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rolldice
  template:
    metadata:
      labels:
        app: rolldice
        version: v1
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
        - name: rolldice
          image: nrt.ocir.io/orasejapan/shukawam/rolldice-zero-code:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ocir-secret
