rolldice-zero-code/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rolldice
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rolldice.shukawam.me
      secretName: shukawam-tls-secret-rolldice
  rules:
    - host: rolldice.shukawam.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rolldice
                port:
                  number: 8080
